# nmdc-orcid-creditor

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-push-image.yaml  test.yaml
nmdc-orcid-creditor-proxy/: Code.gs.js  Config.gs.js  README.md
nmdc_orcid_creditor/: config.py  helpers.py  main.py  test_main.py
nmdc_orcid_creditor/templates/: base.html.jinja  credits.html.jinja  credits.jinja  error.html.jinja  error.jinja  home.html.jinja  home.jinja  index.jinja
static/: index.html
