[tool.poetry]
name = "nmdc-orcid-creditor"
version = "0.1.0"
description = "Web app NMDC team members use to credit ambassadors and champions via ORCID"
authors = []
readme = "README.md"
repository = "https://github.com/microbiomedata/nmdc-orcid-creditor"
homepage = "https://github.com/microbiomedata/nmdc-orcid-creditor"
documentation = "https://github.com/microbiomedata/nmdc-orcid-creditor"
keywords = ["orcid", "credit"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.115.0" }

[tool.poetry.group.dev.dependencies]
# We use `black` for code formatting.
# Usage: $ poetry run black --line-length 120 .
# Docs: https://black.readthedocs.io/en/stable/
black = "^24.8.0"
# We use `pytest` to run tests.
# Usage: $ poetry run pytest
# Docs: https://docs.pytest.org/en/stable/contents.html
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
# Make it so that, when someone runs `$ poetry run pytest`, in addition to running the tests, it
# also (via the `pytest-cov` plugin) measures test coverage of the source code directory.
# Reference: https://pytest-cov.readthedocs.io/en/latest/config.html#configuration
addopts = "--cov=refscan"

[tool.black]
# Make it so that, when someone runs `$ poetry run black`, these default CLI options are used.
# Reference: https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
